scrollbar styles fixed

--- a/src/pages/table/table.module.scss
+++ b/src/pages/table/table.module.scss
@@ -31,6 +31,26 @@
 .modal {
     width: 100%;
     border: red 1px solid;
+    
+    ::-webkit-scrollbar {
+      width: 10px;
+    }
+    
+    /* Track */
+    ::-webkit-scrollbar-track {
+      background: #f1f1f1;
+    }
+    
+    /* Handle */
+    ::-webkit-scrollbar-thumb {
+      background: #888;
+    }
+    
+    /* Handle on hover */
+    ::-webkit-scrollbar-thumb:hover {
+      background: #555;
+    }
+
     div {
         width: 100%;
     }
